# llvm-pass-hikari

./: AntiClassDump.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantEncryption.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  Makefile  Obfuscation.cpp  Obfuscation.h  Readme.md  StringEncryption.cpp  demo.cpp  diff.md
compat/: CallSite.h
hikari/: AntiDebugging.cpp  AntiHooking.cpp  CryptoUtils.cpp  IndirectBranch.cpp  SplitBasicBlocks.cpp  SubstituteImpl.cpp  Substitution.cpp  Utils.cpp
